WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146802
[Streams API] Templating ReadableJSStream
https://bugs.webkit.org/show_bug.cgi?id=146802
Summary
[Streams API] Templating ReadableJSStream
youenn fablet
Reported
2015-07-09 13:16:27 PDT
Templaing ReadableJSStream might allow easier support for teeing streams as well as more easily supporting ReadableByteStream. The queue management in particular could be templatized.
Attachments
Patch
(11.00 KB, patch)
2015-07-09 13:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.95 KB, patch)
2015-07-12 08:31 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2015-07-09 13:52:31 PDT
Created
attachment 256509
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-09 13:55:23 PDT
Attachment 256509
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/streams/ReadableStream.h:145: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2015-07-10 09:40:15 PDT
Comment on
attachment 256509
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256509&action=review
Still really concerned about the use of JSC::Strong here. I am increasingly thinking this belongs in JavaScriptCore not WebCore, despite the comments about where Blink chose to put it.
> Source/WebCore/Modules/streams/ReadableStream.h:141 > +// Subclasses should implement error storage, pulling and cancelling.
Normally we’d say “derived classes” rather than “subclasses” to match C++ terminology.
> Source/WebCore/Modules/streams/ReadableStream.h:142 > +template <typename ChunkType>
We typically omit out the space between template and "<".
> Source/WebCore/Modules/streams/ReadableStream.h:143 > +class ReadableEnqueuingStream : public ReadableStream {
Could/should put "final" here.
> Source/WebCore/bindings/js/ReadableJSStream.h:60 > +template <>
Again, normally no space after "template". I also think this looks better on a single line, but not sure others agree.
> Source/WebCore/bindings/js/ReadableJSStream.h:61 > +class ReadableEnqueuingStream<ReadableJSStreamValue> : public ReadableStream {
Is it really helpful to have this be a class template specialization? Why not have this be a non-template class? Related question; perhaps this should derive from ReadableEnqueuingStream<ReadableJSStreamValue> rather than from ReadableStream, for more code sharing. Then we’d want that class to not be final, but this one would be. I guess the problem with that is that it’s not OK to call the enqueueChunk feature from the base, so maybe not good to inherit that way. Too bad, though.
> Source/WebCore/bindings/js/ReadableJSStream.h:63 > + double desiredSize() const { return m_highWaterMark - m_totalQueueSize; }
Extra space here after "const".
youenn fablet
Comment 4
2015-07-12 07:05:58 PDT
Thanks for the review. (In reply to
comment #3
)
> Comment on
attachment 256509
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=256509&action=review
> > Still really concerned about the use of JSC::Strong here. I am increasingly > thinking this belongs in JavaScriptCore not WebCore, despite the comments > about where Blink chose to put
I agree, although I think we can find workarounds to remove JSC::Strong uses. In addition to straightforward GC, putting ReadableStream into JSC would allow us to get closer to the spec. We would probably use UnderlyingSource to tie WebCore (HTTP, MediaStream) with JSC streams. Part of the implementation would be done in JS as well. Having it in WebCore ensures that the pipe between specific WebCore producer and consumer can be made efficient (HTTP to MediaStream e.g.). I am thinking that this would still be possible to do it even if streams are in JSC, but further validating this would be good. It was also helping to have everything in WebCore so that the queuing is made efficient (no use of promises all the time). But early optimization is usually bad so probably not a strong point.
> > > Source/WebCore/Modules/streams/ReadableStream.h:141 > > +// Subclasses should implement error storage, pulling and cancelling. > > Normally we’d say “derived classes” rather than “subclasses” to match C++ > terminology.
OK
> > > Source/WebCore/Modules/streams/ReadableStream.h:142 > > +template <typename ChunkType> > > We typically omit out the space between template and "<".
OK
> > > Source/WebCore/Modules/streams/ReadableStream.h:143 > > +class ReadableEnqueuingStream : public ReadableStream { > > Could/should put "final" here. > > > Source/WebCore/bindings/js/ReadableJSStream.h:60 > > +template <> > > Again, normally no space after "template". I also think this looks better on > a single line, but not sure others agree.
OK
> > > Source/WebCore/bindings/js/ReadableJSStream.h:61 > > +class ReadableEnqueuingStream<ReadableJSStreamValue> : public ReadableStream { > > Is it really helpful to have this be a class template specialization? Why > not have this be a non-template class?
That could be done too.
> > Related question; perhaps this should derive from > ReadableEnqueuingStream<ReadableJSStreamValue> rather than from > ReadableStream, for more code sharing. Then we’d want that class to not be > final, but this one would be. I guess the problem with that is that it’s not > OK to call the enqueueChunk feature from the base, so maybe not good to > inherit that way. Too bad, though.
We could add an incrementSize() method and specialize it for ReadableJSStreamValue.
> > > Source/WebCore/bindings/js/ReadableJSStream.h:63 > > + double desiredSize() const { return m_highWaterMark - m_totalQueueSize; } > > Extra space here after "const".
OK
youenn fablet
Comment 5
2015-07-12 08:31:21 PDT
Created
attachment 256679
[details]
Patch for landing
youenn fablet
Comment 6
2015-07-12 08:34:20 PDT
(In reply to
comment #5
)
> Created
attachment 256679
[details]
> Patch for landing
I fixed the style issues and final. I will further check improvements at my return in two weeks.
WebKit Commit Bot
Comment 7
2015-07-12 09:29:20 PDT
Comment on
attachment 256679
[details]
Patch for landing Clearing flags on attachment: 256679 Committed
r186740
: <
http://trac.webkit.org/changeset/186740
>
WebKit Commit Bot
Comment 8
2015-07-12 09:29:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug